# DVM-Client

./: .gitattributes  .gitignore
UIMaker/: UIMaker.sln  maker.proto  pb_to_code.bat
android-release-key/: AndroidSignKey.txt  encrypted_release.key  upload-release.keystore  upload_cert.pem
assets/: current_version_info.txt
cocos2d-x/: CMakeLists.txt
cocos2d-x/cocos/editor-support/anb/: Android.mk  AzBlend.cpp  AzBlend.h  AzDataDictionary.cpp  AzDataDictionary.h  AzDataInfo.h  AzDataTrip.cpp  AzDataTrip.h  AzID.cpp  AzID.h  AzTM.cpp  AzTM.h  CCActionInterval3D.cpp  CCActionInterval3D.h  CCAzPerspective.cpp  CCAzPerspective.h  CCAzVRP.cpp  CCAzVRP.h  CCazVisual.cpp  CCazVisual.h  CMakeLists.txt  a2dLoader4x.cpp  a2dLoader4x.h  a2dToken4x.cpp  a2dToken4x.h  azmodel.pb.cc  azmodel.pb.h  azmodel.proto  azvisual.pb.cc  azvisual.pb.h  azvisual.proto  pb_to_code.bat
cocos2d-x/cocos/editor-support/anb/proj.win32/: libANB.vcxproj  libANB.vcxproj.filters
dragonvillage/: config.json  entry_patch.lua  fixed_constant.lua
sv_tables/: table_alphabet_event.csv  table_attendance_basic.csv  table_battlepass_clan_dark.csv  table_battlepass_clan_earth.csv  table_battlepass_clan_light.csv  table_battlepass_clan_water.csv  table_bingo_reward.csv  table_capsule_box.csv  table_challenge_management.csv  table_clan_attendance.csv  table_clanwar_data.csv  table_clanwar_group.csv  table_colosseum_reward.csv  table_cross_promotion.csv  table_daily_mission.csv  table_dice_reward.csv  table_dragon.csv  table_dragon_collection.csv  table_dragon_research.csv  table_dragon_summon.csv  (+32 more)
(+27138 files in other folders)
